<resources>
    <string name="app_name">Road</string>
    <string name="account">用户名:</string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="register">新用户注册</string>
    <string name="f_password">忘记密码</string>
    <string name="login_sign">登录/注册</string>
    <string name="zh">123456</string>
    <string name="account_can_not_be_empty">Account can\'t be empty</string>
    <string name="password_can_not_be_empty">Password can\'t be empty</string>
    <string name="music">MUSIC</string>
    <string name="hot">HOT</string>
    <string name="movie">MOVIE</string>
</resources>
