<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/login_red"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="118dp"
            android:layout_height="38dp">

            <TextView
                android:id="@+id/Hot_text"
                android:layout_width="118dp"
                android:layout_height="38dp"
                android:gravity="center"
                android:text="@string/hot"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="118dp"
            android:layout_height="38dp">

            <TextView
                android:id="@+id/Music_text"
                android:layout_width="118dp"
                android:layout_height="38dp"
                android:gravity="center"
                android:text="@string/music"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="118dp"
            android:layout_height="38dp">

            <TextView
                android:id="@+id/Movie_text"
                android:layout_width="118dp"
                android:layout_height="38dp"
                android:gravity="center"
                android:text="@string/movie"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:orientation="horizontal"
        android:background="@color/blackred">

        <Button
            android:id="@+id/btnhot"
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:background="@color/blackred"
            android:layout_marginLeft="32dp"/>

        <Button
            android:id="@+id/btnmusic"
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:background="@color/blackred"
            android:layout_marginLeft="68dp"/>

        <Button
            android:id="@+id/btnmovie"
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:background="@color/blackred"
            android:layout_marginLeft="68dp"/>
    </LinearLayout>

</LinearLayout>